tests/files/ok/ExplicitInterfaceImpl.krna


struct FnWithImpl {
    fnWithImpl: fn(Integer) -> Integer impl Consumer2
}

interface Consumer2 {
    pub fn consume(self, input: Integer) -> Integer
}