tests/files/fail/GenericOfGeneric.krna


fn f<T>(t: T, w: T<string>) -> T {
    return t;
}